fix menu not visible

--- a/src/app/components/Session/index.scss
+++ b/src/app/components/Session/index.scss
@@ -42,5 +42,5 @@
 }
 
 .windows {
-  padding: 0 0.5rem 0 0.5rem;
+  padding: 0.5rem;
 }
